--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </li>
           </ul>
         </nav>
+
         <address class="contacts">
           <ul class="contacts-list">
             <li class="contacts-item">
@@ -58,6 +59,12 @@
             </li>
           </ul>
         </address>
+
+        <button class="burger-btn" type="button">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -66,18 +73,18 @@
     <!-- #region Main  -->
     <main>
       <!-- #region hero  -->
-      <section class="section hero-image">
+      <!-- <section class="section hero-image">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- #endregion hero -->
 
       <!-- #region Features  -->
-      <section class="section features">
+      <!-- <section class="section features">
         <div class="container features-container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
@@ -131,7 +138,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- #endregion Features  -->
 
       <!-- #region Team  -->
@@ -147,7 +154,7 @@
                 width="264"
                 height="260"
               />
-              <div class="container team-card">
+              <div class="team-card">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-content">Product Designer</p>
                 <ul class="team-card icons">
@@ -190,7 +197,7 @@
                 width="264"
                 height="260"
               />
-              <div class="container team-card">
+              <div class="team-card">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-content">Frontend Developer</p>
                 <ul class="team-card icons">
@@ -233,7 +240,7 @@
                 width="264"
                 height="260"
               />
-              <div class="container team-card">
+              <div class="team-card">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-content">Marketing</p>
                 <ul class="team-card icons">
@@ -276,7 +283,7 @@
                 width="264"
                 height="260"
               />
-              <div class="container team-card">
+              <div class="team-card">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-content">UI Designer</p>
                 <ul class="team-card icons">
@@ -454,7 +461,7 @@
     <!-- #endregion Main  -->
 
     <!-- #region footer -->
-    <footer class="page-footer">
+    <!-- <footer class="page-footer">
       <div class="container footer-container">
         <div class="footer-logo-text">
           <a class="logo footer-logo" href="./index.html">
@@ -518,7 +525,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- #endregion footer -->
 
