--- a/index.html
+++ b/index.html
@@ -151,18 +151,18 @@
     <!-- #region Main  -->
     <main>
       <!-- #region hero  -->
-      <!-- <section class="section hero-image">
+      <section class="section hero-image">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- #endregion hero -->
 
       <!-- #region Features  -->
-      <!-- <section class="section features">
+      <section class="section features">
         <div class="container features-container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
@@ -216,7 +216,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- #endregion Features  -->
 
       <!-- #region Team  -->
@@ -227,7 +227,11 @@
             <li class="team-item">
               <img
                 class="team-photo"
-                src="./images/img.jpg"
+                src="./images/Mark-Guerrero.jpg"
+                srcset="
+                  ./images/Mark-Guerrero.jpg    1x,
+                  ./images/Mark-Guerrero@2x.jpg 2x
+                "
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -270,7 +274,8 @@
             <li class="team-item">
               <img
                 class="team-photo"
-                src="./images/img1.jpg"
+                src="./images/Tom-Ford.jpg"
+                srcset="./images/Tom-Ford.jpg 1x, ./images/Tom-Ford@2x.jpg 2x"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -313,7 +318,11 @@
             <li class="team-item">
               <img
                 class="team-photo"
-                src="./images/img2.jpg"
+                src="./images/Camila-Garcia.jpg"
+                srcset="
+                  ./images/Camila-Garcia.jpg    1x,
+                  ./images/Camila-Garcia@2x.jpg 2x
+                "
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -356,7 +365,11 @@
             <li class="team-item">
               <img
                 class="team-photo"
-                src="./images/img3.jpg"
+                src="./images/Daniel-Wilson.jpg"
+                srcset="
+                  ./images/Daniel-Wilson.jpg    1x,
+                  ./images/Daniel-Wilson@2x.jpg 2x
+                "
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
