add part of footer

--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
     <!-- #endregion Main  -->
 
     <!-- #region footer -->
-    <!-- <footer class="page-footer">
+    <footer class="page-footer">
       <div class="container footer-container">
         <div class="footer-logo-text">
           <a class="logo footer-logo" href="./index.html">
@@ -728,7 +728,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- #endregion footer -->
 
