--- a/index.html
+++ b/index.html
@@ -814,10 +814,10 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              <p>
+              <span class="modal-checkbox-text">
                 I accept the terms and conditions of the
                 <a class="privacy-link" href="#">Privacy Policy</a>
-              </p>
+              </span>
             </label>
           </div>
 
